added postgress database and endpoint auth/register
