# cmd/main.go
@@ -1,13 +1,15 @@
 package main
 
 import (
-	controller "github.com/ICOMP-UNC/newworld-FlorSchroder/internal/controllers"
-
-	_ "github.com/ICOMP-UNC/newworld-FlorSchroder/docs" // Ensure this path is correct
+	"log"
 
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/swagger"
+
+	_ "github.com/ICOMP-UNC/newworld-FlorSchroder/docs"
+	"github.com/ICOMP-UNC/newworld-FlorSchroder/internal/analytics"
+	"github.com/ICOMP-UNC/newworld-FlorSchroder/internal/controllers"
 )
 
 // @title Swagger Example API
@@ -19,7 +21,6 @@ import (
 // @contact.email you@example.com
 // @license.name MIT
 // @license.url https://opensource.org/licenses/MIT
-
 func main() {
 	app := fiber.New()
 
@@ -28,49 +29,29 @@ func main() {
 		AllowMethods: "GET,POST,HEAD,PUT,DELETE,PATCH",
 	}))
 
-	app.Get("/market", controller.GetSummaryMarket)
-	app.Get("/analytics/most-expensive-sale", controller.GetMostExpensiveSale)
-	app.Get("/analytics/average-delivery-time", controller.GetAverageDeliveryTime)
+	// Connect to the database
+	dbPool, err := analytics.ConnectDB()
+	if err != nil {
+		log.Fatalf("Failed to connect to the database: %v", err)
+	}
+	defer dbPool.Close()
 
-	app.Get("/swagger/*", swagger.HandlerDefault) // Serve the Swagger documentation
+	// Initialize the database
+	err = analytics.InitDB(dbPool)
+	if err != nil {
+		log.Fatalf("Failed to initialize the database: %v", err)
+	}
 
-	app.Listen(":3000")
+	// Inject the dbPool into your controllers as needed
+	analytics.SetDB(dbPool)
+
+	app.Get("/market", controllers.GetSummaryMarket)
+	app.Get("/analytics/most-expensive-sale", controllers.GetMostExpensiveSale)
+	app.Get("/analytics/average-delivery-time", controllers.GetAverageDeliveryTime)
+
+	app.Post("/auth/register", controllers.Register)
+
+	app.Get("/swagger/*", swagger.HandlerDefault)
+
+	log.Fatal(app.Listen(":3000"))
 }
-
-// package main
-
-// import (
-// 	controller "goApp/cmd/controllers"
-
-// 	"github.com/gofiber/fiber/v2"
-
-// 	"github.com/gofiber/swagger"
-
-// 	_ "goApp/cmd/server/docs"
-// )
-
-// // @title Fiber API Example
-// // @version 1.0
-// // @description This is a sample server.
-// // @host localhost:3000
-// // @BasePath /
-// // @termsOfService http://swagger.io/terms/
-// // @contact.name API Support
-// // @contact.email you@example.com
-// // @license.name Apache 2.0
-// // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-
-// func main() {
-// 	app := fiber.New()
-
-// 	app.Get("/market", controller.GetSummaryMarket)
-
-// 	app.Get("/swagger/*", swagger.HandlerDefault)
-
-// 	// app.Get("/swagger/*", swagger.New(swagger.Config{
-// 	// 	URL:         "/swagger/doc.json",
-// 	// 	DeepLinking: false,
-// 	// }))
-
-// 	app.Listen(":3000")
-// }
